# CHATGPT-SCENERY-GENERATOR

./: README.md  pyproject.toml
docs/: desktop-platform-plan.md  web-platform-plan.md
src/hems_generator/: __init__.py  cli.py  config.py  detection.py  dsf_writer.py  exporter.py  job.py  obj_writer.py  pipeline.py  scene.py  ui_server.py  utils.py
src/hems_generator/ui/: app.js  index.html  styles.css
